force-app/main/default/objects/MaBVRechnung__c/MaBVRechnung__c.object-meta.xml
<CustomObject>
    <label>MaBV Rechnung</label>
    <nameField>
        <label>MaBV Rechnung-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MaBV Rechnungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>