force-app/main/default/objects/MaBVRechnung__c/fields/AmtsgerichtUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>AmtsgerichtUnternehmen__c</fullName>
    <label>Amtsgericht Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>