force-app/main/default/objects/MaBVRechnung__c/fields/AnredeErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>AnredeErsterKaeufer__c</fullName>
    <label>Anrede 1. Käufer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>