force-app/main/default/objects/MaBVRechnung__c/fields/AnredeGeschaeftsfuehrerUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>AnredeGeschaeftsfuehrerUnternehmen__c</fullName>
    <label>Anrede Geschäftsführer Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>