force-app/main/default/objects/MaBVRechnung__c/fields/AnredeZweiterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>AnredeZweiterKaeufer__c</fullName>
    <label>Anrede 2. Käufer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>