force-app/main/default/objects/MaBVRechnung__c/fields/AnzahlZahlungen__c.field-meta.xml
<CustomField>
    <fullName>AnzahlZahlungen__c</fullName>
    <label>Anzahl Zahlungen</label>
    <summaryForeignKey>Zahlung__c.MaBVRechnung__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>