force-app/main/default/objects/MaBVRechnung__c/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <label>Apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>