force-app/main/default/objects/MaBVRechnung__c/fields/BenoetigtGenehmigung__c.field-meta.xml
<CustomField>
    <fullName>BenoetigtGenehmigung__c</fullName>
    <formula>MaBVRechnungMaster__r.MaBVRate__r.BenoetigtGenehmigung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benötigt Genehmigung?</label>
    <type>Checkbox</type>
</CustomField>