force-app/main/default/objects/MaBVRechnung__c/fields/Bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Bezahlt__c</fullName>
    <label>Bezahlt</label>
    <summarizedField>Zahlung__c.Betrag__c</summarizedField>
    <summaryForeignKey>Zahlung__c.MaBVRechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>