force-app/main/default/objects/MaBVRechnung__c/fields/CountDaysUntilInvoicePaid__c.field-meta.xml
<CustomField>
    <fullName>CountDaysUntilInvoicePaid__c</fullName>
    <formula>Zahldatum__c - Rechnungsdatum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anzahl Tage bis Rechnung gezahlt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>