force-app/main/default/objects/MaBVRechnung__c/fields/DatumKaeuferangebotAbgegeben__c.field-meta.xml
<CustomField>
    <fullName>DatumKaeuferangebotAbgegeben__c</fullName>
    <label>Datum Käuferangebot abgegeben</label>
    <type>Date</type>
</CustomField>