force-app/main/default/objects/MaBVRechnung__c/fields/DatumStorniert__c.field-meta.xml
<CustomField>
    <fullName>DatumStorniert__c</fullName>
    <label>Datum storniert</label>
    <type>Date</type>
</CustomField>