force-app/main/default/objects/MaBVRechnung__c/fields/DritteMahnungVersendetAm__c.field-meta.xml
<CustomField>
    <fullName>DritteMahnungVersendetAm__c</fullName>
    <label>3. Mahnung versendet am</label>
    <type>Date</type>
</CustomField>