force-app/main/default/objects/MaBVRechnung__c/fields/EmailUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>EmailUnternehmen__c</fullName>
    <label>E-Mail Unternehmen</label>
    <type>Email</type>
</CustomField>