force-app/main/default/objects/MaBVRechnung__c/fields/Genehmigt__c.field-meta.xml
<CustomField>
    <fullName>Genehmigt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genehmigt?</label>
    <type>Checkbox</type>
</CustomField>