force-app/main/default/objects/MaBVRechnung__c/fields/HRBUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>HRBUnternehmen__c</fullName>
    <label>HRB Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>