force-app/main/default/objects/MaBVRechnung__c/fields/IDKunde__c.field-meta.xml
<CustomField>
    <fullName>IDKunde__c</fullName>
    <label>ID Käufer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>