force-app/main/default/objects/MaBVRechnung__c/fields/Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Immobilie__c</fullName>
    <label>Immobilie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>