force-app/main/default/objects/MaBVRechnung__c/fields/IstBezahlt__c.field-meta.xml
<CustomField>
    <fullName>IstBezahlt__c</fullName>
    <formula>OffenerBetragNeu__c &lt;= 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ist Bezahlt</label>
    <type>Checkbox</type>
</CustomField>