force-app/main/default/objects/MaBVRechnung__c/fields/Kommentar__c.field-meta.xml
<CustomField>
    <fullName>Kommentar__c</fullName>
    <label>Kommentar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>