force-app/main/default/objects/MaBVRechnung__c/fields/Komplementaer__c.field-meta.xml
<CustomField>
    <fullName>Komplementaer__c</fullName>
    <label>Komplementär</label>
    <length>80</length>
    <type>Text</type>
</CustomField>