force-app/main/default/objects/MaBVRechnung__c/fields/Leistung__c.field-meta.xml
<CustomField>
    <fullName>Leistung__c</fullName>
    <label>Leistung</label>
    <type>TextArea</type>
</CustomField>