force-app/main/default/objects/MaBVRechnung__c/fields/LeistungszeitraumBis__c.field-meta.xml
<CustomField>
    <fullName>LeistungszeitraumBis__c</fullName>
    <label>Leistungszeitraum bis</label>
    <type>Date</type>
</CustomField>