force-app/main/default/objects/MaBVRechnung__c/fields/LeistungszeitraumVon__c.field-meta.xml
<CustomField>
    <fullName>LeistungszeitraumVon__c</fullName>
    <label>Leistungszeitraum von</label>
    <type>Date</type>
</CustomField>