force-app/main/default/objects/MaBVRechnung__c/fields/MaBV_Grundschuld_ist_bestellt__c.field-meta.xml
<CustomField>
    <fullName>MaBV_Grundschuld_ist_bestellt__c</fullName>
    <formula>MaBVRechnungMaster__r.Opportunity__r.GrundschuldIstBestellt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wird aus VKC gespiegelt - nur auf VKC bearbeitbar.</inlineHelpText>
    <label>Grundschuld ist bestellt</label>
    <type>Checkbox</type>
</CustomField>