force-app/main/default/objects/MaBVRechnung__c/fields/MaBVRechnungMaster__c.field-meta.xml
<CustomField>
    <fullName>MaBVRechnungMaster__c</fullName>
    <label>MaBV Rechnung Master</label>
    <referenceTo>MaBVRechnungMaster__c</referenceTo>
    <relationshipLabel>MaBV Rechnungen</relationshipLabel>
    <relationshipName>MaBV_Rechnungen</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>