force-app/main/default/objects/MaBVRechnung__c/fields/MahnungVersendetAm__c.field-meta.xml
<CustomField>
    <fullName>MahnungVersendetAm__c</fullName>
    <label>Mahnung versendet am</label>
    <type>Date</type>
</CustomField>