force-app/main/default/objects/MaBVRechnung__c/fields/MahnungZurGenehmigungSenden__c.field-meta.xml
<CustomField>
    <fullName>MahnungZurGenehmigungSenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mahnung zur Genehmigung senden</label>
    <type>Checkbox</type>
</CustomField>