force-app/main/default/objects/MaBVRechnung__c/fields/Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MaBVRechnungenMaklerbetreuer</relationshipName>
    <type>Lookup</type>
</CustomField>