force-app/main/default/objects/MaBVRechnung__c/fields/OffenerBetrag__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetrag__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offener Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>