force-app/main/default/objects/MaBVRechnung__c/fields/OffenerBetragInklusiveVerzugszinsen__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetragInklusiveVerzugszinsen__c</fullName>
    <formula>OffenerBetragNeu__c + VerzugszinsInEuro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offener Betrag inklusive Verzugszinsen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>