force-app/main/default/objects/MaBVRechnung__c/fields/OffenerBetragNeu__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetragNeu__c</fullName>
    <formula>IF((RateGesamtInEuro__c - Bezahlt__c) &lt; 0, 0, RateGesamtInEuro__c - Bezahlt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offener Betrag (neu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>