force-app/main/default/objects/MaBVRechnung__c/fields/OpenSum__c.field-meta.xml
<CustomField>
    <fullName>OpenSum__c</fullName>
    <formula>IF(Storniert__c,0,RateGesamtInEuro__c - Bezahlt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offener Betrag (Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>