force-app/main/default/objects/MaBVRechnung__c/fields/ParagraphKaufpreisfaelligkeit__c.field-meta.xml
<CustomField>
    <fullName>ParagraphKaufpreisfaelligkeit__c</fullName>
    <label>Paragraph Kaufpreisfälligkeit</label>
    <type>TextArea</type>
</CustomField>