force-app/main/default/objects/MaBVRechnung__c/fields/PaymentReminderAutomaticDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentReminderAutomaticDate__c</fullName>
    <description>Is used to determine when the payment reminder should be approved automatically if it&apos;s in step 1 for the broker advisor</description>
    <label>Zahlungserinnerung Datum automatisch</label>
    <type>DateTime</type>
</CustomField>