force-app/main/default/objects/MaBVRechnung__c/fields/PLZErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>PLZErsterKaeufer__c</fullName>
    <label>PLZ 1. Käufer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>