force-app/main/default/objects/MaBVRechnung__c/fields/PLZUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>PLZUnternehmen__c</fullName>
    <label>PLZ Unternehmen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>