force-app/main/default/objects/MaBVRechnung__c/fields/PreisanpassungInEuro__c.field-meta.xml
<CustomField>
    <fullName>PreisanpassungInEuro__c</fullName>
    <label>Preisanpassung in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>