force-app/main/default/objects/MaBVRechnung__c/fields/PreisanpassungText__c.field-meta.xml
<CustomField>
    <fullName>PreisanpassungText__c</fullName>
    <label>Preisanpassung Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>