force-app/main/default/objects/MaBVRechnung__c/fields/RateGesamtInEuro__c.field-meta.xml
<CustomField>
    <fullName>RateGesamtInEuro__c</fullName>
    <formula>RateInEuro__c + SicherheitPlusInEuro__c - SicherheitseinbehaltInEuro__c + PreisanpassungInEuro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate gesamt in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>