force-app/main/default/objects/MaBVRechnung__c/fields/RateInEuro__c.field-meta.xml
<CustomField>
    <fullName>RateInEuro__c</fullName>
    <label>Rate in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>