force-app/main/default/objects/MaBVRechnung__c/fields/RateInPercentage__c.field-meta.xml
<CustomField>
    <fullName>RateInPercentage__c</fullName>
    <label>Rate in %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>