force-app/main/default/objects/MaBVRechnung__c/fields/RateNummer__c.field-meta.xml
<CustomField>
    <fullName>RateNummer__c</fullName>
    <label>Rate Nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>