force-app/main/default/objects/MaBVRechnung__c/fields/RechnungWurdeGeneriert__c.field-meta.xml
<CustomField>
    <fullName>RechnungWurdeGeneriert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung wurde generiert</label>
    <type>Checkbox</type>
</CustomField>