force-app/main/default/objects/MaBVRechnung__c/fields/SicherheitPlusInEuro__c.field-meta.xml
<CustomField>
    <fullName>SicherheitPlusInEuro__c</fullName>
    <label>Sicherheit (plus) in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>