force-app/main/default/objects/MaBVRechnung__c/fields/SicherheitPlusInPercentage__c.field-meta.xml
<CustomField>
    <fullName>SicherheitPlusInPercentage__c</fullName>
    <label>Sicherheit (plus) in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>