force-app/main/default/objects/MaBVRechnung__c/fields/SicherheitseinbehaltInEuro__c.field-meta.xml
<CustomField>
    <fullName>SicherheitseinbehaltInEuro__c</fullName>
    <label>Sicherheitseinbehalt in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>