force-app/main/default/objects/MaBVRechnung__c/fields/SicherheitseinbehaltInPercentage__c.field-meta.xml
<CustomField>
    <fullName>SicherheitseinbehaltInPercentage__c</fullName>
    <label>Sicherheitseinbehalt in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>