force-app/main/default/objects/MaBVRechnung__c/fields/StadtErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>StadtErsterKaeufer__c</fullName>
    <label>Stadt 1. Käufer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>