force-app/main/default/objects/MaBVRechnung__c/fields/StadtUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>StadtUnternehmen__c</fullName>
    <label>Stadt Unternehmen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>