force-app/main/default/objects/MaBVRechnung__c/fields/SteuernummerUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>SteuernummerUnternehmen__c</fullName>
    <label>Steuernummer Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>