force-app/main/default/objects/MaBVRechnung__c/fields/Storniert__c.field-meta.xml
<CustomField>
    <fullName>Storniert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storniert</label>
    <type>Checkbox</type>
</CustomField>