force-app/main/default/objects/MaBVRechnung__c/fields/StornoLaufnummer__c.field-meta.xml
<CustomField>
    <fullName>StornoLaufnummer__c</fullName>
    <label>Storno Laufnummer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>