force-app/main/default/objects/MaBVRechnung__c/fields/StrasseErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>StrasseErsterKaeufer__c</fullName>
    <label>Straße 1. Käufer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>