force-app/main/default/objects/MaBVRechnung__c/fields/StrasseUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>StrasseUnternehmen__c</fullName>
    <label>Straße Unternehmen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>