force-app/main/default/objects/MaBVRechnung__c/fields/TageSeitLetzterMahnung__c.field-meta.xml
<CustomField>
    <fullName>TageSeitLetzterMahnung__c</fullName>
    <formula>IF(ISBLANK(MahnungVersendetAm__c), null, TODAY() - IF( !IsBlank(DritteMahnungVersendetAm__c), DritteMahnungVersendetAm__c, IF(!IsBlank(ZweiteMahnungVersendetAm__c), ZweiteMahnungVersendetAm__c, MahnungVersendetAm__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tage seit letzter Mahnung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>