force-app/main/default/objects/MaBVRechnung__c/fields/TageUeberfaellig__c.field-meta.xml
<CustomField>
    <fullName>TageUeberfaellig__c</fullName>
    <formula>TODAY() - (Rechnungsdatum__c + ZahlungszielInTagen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tage überfällig</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>