force-app/main/default/objects/MaBVRechnung__c/fields/TelefaxUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>TelefaxUnternehmen__c</fullName>
    <label>Telefax Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>