force-app/main/default/objects/MaBVRechnung__c/fields/TelefonUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>TelefonUnternehmen__c</fullName>
    <label>Telefon Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>