force-app/main/default/objects/MaBVRechnung__c/fields/Unternehmensname__c.field-meta.xml
<CustomField>
    <fullName>Unternehmensname__c</fullName>
    <label>Unternehmensname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>