force-app/main/default/objects/MaBVRechnung__c/fields/UrkundennummerKaufvertrag__c.field-meta.xml
<CustomField>
    <fullName>UrkundennummerKaufvertrag__c</fullName>
    <label>Urkundennummer Kaufvertrag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>