force-app/main/default/objects/MaBVRechnung__c/fields/UrkundennummerKaufvertragsangebot__c.field-meta.xml
<CustomField>
    <fullName>UrkundennummerKaufvertragsangebot__c</fullName>
    <label>Urkundennummer Kaufvertragsangebot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>