force-app/main/default/objects/MaBVRechnung__c/fields/UrkundennummerKaufvertragsannahme__c.field-meta.xml
<CustomField>
    <fullName>UrkundennummerKaufvertragsannahme__c</fullName>
    <label>Urkundennummer Kaufvertragsannahme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>