force-app/main/default/objects/MaBVRechnung__c/fields/UStIdNr__c.field-meta.xml
<CustomField>
    <fullName>UStIdNr__c</fullName>
    <label>USt-IdNr.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>