force-app/main/default/objects/MaBVRechnung__c/fields/VerzugszinsDatensatz__c.field-meta.xml
<CustomField>
    <fullName>VerzugszinsDatensatz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verzugszins Datensatz</label>
    <referenceTo>Verzugszins__c</referenceTo>
    <relationshipLabel>MaBV Rechnungen</relationshipLabel>
    <relationshipName>MaBVRechnungen</relationshipName>
    <type>Lookup</type>
</CustomField>