force-app/main/default/objects/MaBVRechnung__c/fields/VerzugszinsenProTag__c.field-meta.xml
<CustomField>
    <fullName>VerzugszinsenProTag__c</fullName>
    <formula>VerzugszinsInEuro__c / TageUeberfaellig__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verzugszinsen pro Tag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>