force-app/main/default/objects/MaBVRechnung__c/fields/VerzugszinsInEuro__c.field-meta.xml
<CustomField>
    <fullName>VerzugszinsInEuro__c</fullName>
    <formula>VerzugszinsInProzent__c  * RateGesamtInEuro__c * TageUeberfaellig__c / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verzugszins in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>