force-app/main/default/objects/MaBVRechnung__c/fields/VerzugszinsInProzent__c.field-meta.xml
<CustomField>
    <fullName>VerzugszinsInProzent__c</fullName>
    <formula>VerzugszinsDatensatz__r.Zinssatz__c +  IF(!IsBlank(MaBVRechnungMaster__r.Opportunity__r.Immobilie__r.VerzugszinsGemKaufvertrag__c), MaBVRechnungMaster__r.Opportunity__r.Immobilie__r.VerzugszinsGemKaufvertrag__c, 0.05)</formula>
    <label>Verzugszins in Prozent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>