force-app/main/default/objects/MaBVRechnung__c/fields/VKC_Bank__c.field-meta.xml
<CustomField>
    <fullName>VKC_Bank__c</fullName>
    <formula>MaBVRechnungMaster__r.Opportunity__r.Bank__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VKC_Bank</label>
    <type>Text</type>
</CustomField>