force-app/main/default/objects/MaBVRechnung__c/fields/VKC_OP_Kommentar__c.field-meta.xml
<CustomField>
    <fullName>VKC_OP_Kommentar__c</fullName>
    <description>Zeigt den OPOS Kommentar der zugehörigen VKC an, nur für Berichte genutzt.</description>
    <formula>MaBVRechnungMaster__r.Opportunity__r.CommentOPOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VKC OP Kommentar</label>
    <type>Text</type>
</CustomField>