force-app/main/default/objects/MaBVRechnung__c/fields/WebsiteUnternehmen__c.field-meta.xml
<CustomField>
    <fullName>WebsiteUnternehmen__c</fullName>
    <label>Website Unternehmen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>