force-app/main/default/objects/MaBVRechnung__c/fields/Zahldatum__c.field-meta.xml
<CustomField>
    <fullName>Zahldatum__c</fullName>
    <label>Zahldatum</label>
    <summarizedField>Zahlung__c.Zahldatum__c</summarizedField>
    <summaryForeignKey>Zahlung__c.MaBVRechnung__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>