force-app/main/default/objects/MaBVRechnung__c/fields/ZahlungszielDatum__c.field-meta.xml
<CustomField>
    <fullName>ZahlungszielDatum__c</fullName>
    <formula>Rechnungsdatum__c +  ZahlungszielInTagen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zahlungsziel Datum</label>
    <type>Date</type>
</CustomField>