force-app/main/default/objects/MaBVRechnung__c/fields/ZahlungszielInTagen__c.field-meta.xml
<CustomField>
    <fullName>ZahlungszielInTagen__c</fullName>
    <label>Zahlungsziel in Tagen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>