force-app/main/default/objects/MaBVRechnung__c/fields/ZahlungUeberfaellig__c.field-meta.xml
<CustomField>
    <fullName>ZahlungUeberfaellig__c</fullName>
    <formula>Today() &gt; (Rechnungsdatum__c + ZahlungszielInTagen__c)
&amp;&amp; OffenerBetragNeu__c &gt;= 100
&amp;&amp; RechnungWurdeGeneriert__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zahlung überfällig</label>
    <type>Checkbox</type>
</CustomField>