force-app/main/default/objects/MaBVRechnung__c/fields/ZweiteMahnungVersendetAm__c.field-meta.xml
<CustomField>
    <fullName>ZweiteMahnungVersendetAm__c</fullName>
    <label>2. Mahnung versendet am</label>
    <type>Date</type>
</CustomField>