force-app/main/default/objects/MaBVRechnung__c/validationRules/Mahnstopp.validationRule-meta.xml
<ValidationRule>
    <fullName>Mahnstopp</fullName>
    <active>true</active>
    <errorConditionFormula>(MaBVRechnungMaster__r.MaBVRate__r.Immobilie__r.Mahnstopp__c || MaBVRechnungMaster__r.Opportunity__r.Mahnstopp__c) &amp;&amp;  MahnungZurGenehmigungSenden__c &amp;&amp; IsChanged(MahnungZurGenehmigungSenden__c)</errorConditionFormula>
    <errorDisplayField>MahnungZurGenehmigungSenden__c</errorDisplayField>
    <errorMessage>Für diese VKC / Immobilie liegt ein Mahnstopp vor</errorMessage>
</ValidationRule>